<resources>
    <string name="app_name">BugdetMe</string>
    <string name="month">Month</string>
    <string name="list">List</string>
    <string name="NoExpensesThisMonth">No expenses in this month</string>
    <string name="backup_data_to_sd_card">Backup data to SD card</string>
    <string name="monthly_budget">Monthly budget</string>
    <string name="savings_goal">Savings goal</string>
    <string name="spending_in_current_month">Spending in current month</string>
    <string name="plus">+</string>
    <string name="total_amount">Total amount</string>
    <string name="expense_type">expense type</string>
    <string name="car_mileage">Car mileage</string>
    <string name="have_you_refueled">Have you refueled?</string>
    <string name="petrol">Petrol</string>
    <string name="lpg">LPG</string>
    <string name="enter_saving_goal">Enter saving goal</string>
    <string name="enter_monthly_budget">Enter monthly budget</string>
    <string name="settings">Settings</string>
    <string name="about_me">About me</string>
    <string name="total_in_month">Total in month</string>
    <string name="remaining_funds">Remaining funds</string>
    <string name="goal_index">Goal index</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="percent">\u0020 %</string>
    <string name="PLN">\u0020 zł</string>
    <string name="add_new_expense">Add new expense</string>
    <string name="apply_changes">Apply changes</string>
    <string name="spending_in_last_12_months">Spending in last 12 months</string>
    <string name="fill_db_with_some_data">Fill DB with some data</string>
    <string name="car_data">Car data</string>
    <string name="how_many_litres_of_fuel">How many litres of fuel</string>
    <string name="fuel_burnt_100km">Fuel burnt/100km</string>
</resources>
