<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


    <EditText
        android:id="@+id/carMileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_alignParentTop="true"
        android:hint="@string/car_mileage">


    </EditText>

    <CheckBox
        android:id="@+id/myCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_you_refueled"
        android:layout_below="@id/carMileage"/>

    <RadioGroup
        android:id="@+id/fuelRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myCheckBox" >


        <RadioButton
            android:id="@+id/petrolRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petrol" />


        <RadioButton
            android:id="@+id/lpgRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lpg" />

    </RadioGroup>

</RelativeLayout>