<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/dbBackupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/backup_data_to_sd_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/monthlyBudgetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/monthly_budget"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/savingsGoalTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/savingsGoalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textSize="20sp"
        android:text="@string/savings_goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/monthlyBudgetTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMonthlyBudget"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        android:hint="@string/enter_monthly_budget"
        android:backgroundTint="#52c0b7"
        app:layout_constraintEnd_toStartOf="@+id/editTextSavingsGoal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthlyBudgetTitle" />

    <EditText
        android:id="@+id/editTextSavingsGoal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:backgroundTint="#52c0b7"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_saving_goal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextMonthlyBudget"
        app:layout_constraintTop_toBottomOf="@+id/savingsGoalTitle" />

    <Button
        android:id="@+id/submitBudgetAndGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSavingsGoal" />

</android.support.constraint.ConstraintLayout>