<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/typePieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/spending_in_current_month"
            android:textSize="20sp" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/typePieChart"
            android:layout_width="336dp"
            android:layout_height="336dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/yearBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/spending_in_last_12_months"
            android:textSize="20sp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/yearBarChart"
            android:layout_width="336dp"
            android:layout_height="336dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="36dp"/>

        <TextView
            android:id="@+id/fuelMileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fuel_burnt_100km"
            android:textSize="20sp"
            android:layout_marginBottom="36dp"/>

        <EditText
            android:id="@+id/fuelBurnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_marginBottom="36dp"/>

    </LinearLayout>

</ScrollView>